# HSFC-generator

./: .gitignore  Cargo.toml  readme.md
src/: brgc.rs  lib.rs  main.rs  skilling_transform.rs
src/brgc/: mod.rs
src/crates/hilbert-curve/: Cargo.toml  README.md
src/crates/hilbert-curve/src/: lib.rs
src/crates/hilbert-curve/src/crates/brgc/: Cargo.toml
src/crates/hilbert-curve/src/crates/brgc/src/: lib.rs
src/crates/hilbert-curve/src/crates/skilling-transform/: Cargo.toml
src/crates/hilbert-curve/src/crates/skilling-transform/src/: lib.rs
src/crates/linear-path/: Cargo.toml  README.md
src/crates/linear-path/src/: lib.rs
src/hilbert_curve/: mod.rs
src/linear_path/: mod.rs
src/skilling_transform/: mod.rs
