[package]
name = "hilbert-curve"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brgc = {path = "./src/crates/brgc", version="0.0.0"}
skilling-transform = {path = "./src/crates/skilling-transform", version="0.0.0"}
